[tool.poetry]
name = "sqla-async-orm-queries"
version = "1.0.6"
description = "Base model for SqlAlchemy async orm queries"
authors = ["Amrah <bagirovemrah97@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/amrahhh/sqla_async_orm_queries"
repository = "https://github.com/amrahhh/sqla_async_orm_queries"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8.2"
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"
